Phase 2 additions. Comments and optimisation in progress

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,6 @@
-<!-- views/home.ejs -->
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>Node.js Blog</title>
-    <%- include('partials/header') %>
-</head>
-<body>
-    <%- include('partials/footer') %>
-</body>
-</html>
+<%- include('partials/header') %>
+    <p>Welcome to MTU Arena, where fitness meets community! Our state-of-the-art facility is designed to cater to all levels, from beginners to seasoned athletes. 
+        With a wide variety of equipment, group classes, and personalized training programs, we empower you to reach your fitness goals in a supportive environment. 
+        Whether you’re looking to build strength, improve your endurance, or simply lead a healthier lifestyle, our experienced trainers are here to guide and motivate you every step of the way. 
+        Join us today and take the first step towards a stronger, healthier you!</p>
+<%- include('partials/footer') %>
