--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,8 +15,8 @@
                     <li><a href="/remove">Remove Reservation</a></li>
                     <li><a href="/edit">Modify Reservation</a></li>
                     <li><a href="/view">View Reservations</a></li>
-                    <li><a href="">Help</a></li>
-                    <li><a href="">About</a></li>
+                    <li><a href="/help">Help</a></li>
+                    <li><a href="/about">About</a></li>
                 </ul>
             </div>
         </nav>
