--- a/views/add.ejs
+++ b/views/add.ejs
@@ -10,12 +10,13 @@
     
         <label for="id">ID:</label>
         <input type="text" id="id" name="ID" placeholder="XXXXXXXXXX" pattern="^\d{10}$" minlength="10" maxlength="10" title="Please enter exactly 10 digits (including leading zeros)." required>
-    
+        
         <label for="date">Date:</label>
         <input type="date" id="date" name="date" min="2000-05-11" max="2080-05-20" required>
     
         <label for="time">Time:</label>
         <input type="time" id="time" name="time" required><br>
+        <br>
         <br>
         <label for="cardNum">Card Number:</label>
         <input type="text" id="cardNum" name="cardNum" pattern="^\d{15,19}$" minlength="15" maxlength="19" title="Please enter a valid card number (15-19 digits)." required><br>
@@ -24,8 +25,8 @@
         <input type="month"  id="cardExp" name="cardExp" min="2024-10" max="2040-12" required><br>
 
         <label for="cardSec">Card Security Code:</label>
-        <input type="text" id="cardSec" name="cardSec" pattern="^\d{3}$" minlength="3" maxlength="3" title="Please enter the card's security code (3 digits)." required><br>
-    
+        <input type="text" id="cardSec" name="cardSec" pattern="^\d{3}$" minlength="3" maxlength="3" title="Please enter the card's security code (3 digits)." required>
+        <br><br>
         <button type="submit">Add Record</button>
     </form>
-<%- include('partials/footer') %>            
+<%- include('partials/footer') %>
