--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -2,26 +2,26 @@
 <h1>Modify Record</h1>
     <form action="/edit" method="post">
         <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
+        <input type="text" id="name" name="name" placeholder="John" pattern="[^0-9]*" title="Numbers are not allowed."required>
 
         <label for="surname">Surname:</label>
-        <input type="text" id="surname" name="surname" required>
+        <input type="text" id="surname" name="surname" placeholder="Smith" pattern="[^0-9]*" title="Numbers are not allowed." required>
     
         <label for="id">ID:</label>
-        <input type="number" id="id" name="ID" required>
+        <input type="text" id="id" name="ID" placeholder="XXXXXXXXXX" pattern="^\d{10}$" minlength="10" maxlength="10" title="Please enter exactly 10 digits (including leading zeros)." required>
     
         <label for="date">Date:</label>
-        <input type="date" id="date" name="date" required>
+        <input type="date" id="date" name="date" min="2000-05-11" max="2080-05-20" required>
     
         <label for="time">Time:</label>
-        <input type="time" id="time" name="time" required>
+        <input type="time" id="time" name="time" required><br>
         <br>
-        <label for="newDate">Date:</label>
+        <label for="newDate">New Date:</label>
         <input type="date" id="newDate" name="newDate" required>
-    
-        <label for="newTime">Time:</label>
+        <br>
+        <label for="newTime">New Time:</label>
         <input type="time" id="newTime" name="newTime" required>
-
+        <br><br>
         <button type="submit">Edit Record</button>
     </form>
 <%- include('partials/footer') %>
