--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,3 @@
 <%- include('partials/header') %>
-<p> AN ERROR OCCURED </p>
+<p> AN ERROR OCCURED: RECORD DOES NOT EXIST </p>
 <%- include('partials/footer') %>
