--- a/views/remove.ejs
+++ b/views/remove.ejs
@@ -14,8 +14,8 @@
         <input type="date" id="date" name="date" min="2000-05-11" max="2080-05-20" required>
     
         <label for="time">Time:</label>
-        <input type="time" id="time" name="time" required><br>
-        
+        <input type="time" id="time" name="time" required>
+        <br><br>
         <button type="submit">Remove Record</button>
     </form>
 <%- include('partials/footer') %>
