--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,4 +1,5 @@
 <%- include('partials/header') %>
+<!-- Basic information for the About Us page -->
 <h1>About Our Gym</h1>
     <h2>Our Mission</h2>
     <p>At Our Gym, our mission is to provide a welcoming and motivating environment where people of all fitness levels can 
