--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,4 @@
 <%- include('partials/header') %>
-<p> AN ERROR OCCURED: RECORD DOES NOT EXIST </p>
+<!-- Error page for any error occuring during routing -->
+<p> AN ERROR OCCURED: PLEASE TURN BACK </p>
 <%- include('partials/footer') %>
