--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,18 +2,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Reservation Service</title>
+    <title>MTU ARENA</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="icon" type="image/png" sizes="32x32" href="https://imgs.search.brave.com/LSGnfLRiW_L7Xd4JHaANvT9bi96g1mBTLUlNnvNJs8Y/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly91bmls/aW5rLmVkdS52bi93/cC1jb250ZW50L3Vw/bG9hZHMvMjAyMS8w/OC9NVFUtTG9nby0z/MDB4MzAwLmpwZw">
 </head>
 <body>
     <header>
         <nav>
             <div class="wrapper">
-                <a class="logo" href="/">Reservation Service</a>
+                <a href="/"><img class="logo" src="https://imgs.search.brave.com/oDPJ4Y3H4TxRCFSbOEn4h5cI1ys9dXRvJn4XHR2532Y/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93d3cu/bXR1LmllL21lZGlh/L210dS13ZWJzaXRl/L3NpdGUtYXNzZXRz/L2ltYWdlcy9sb2dv/LnN2Zw"></a>
                 <ul class="navbar">
                     <li><a href="/add">Create Reservation</a></li>
-                    <li><a href="/remove">Remove Reservation</a></li>
-                    <li><a href="/edit">Modify Reservation</a></li>
                     <li><a href="/view">View Reservations</a></li>
                     <li><a href="/help">Help</a></li>
                     <li><a href="/about">About</a></li>
@@ -21,3 +20,4 @@
             </div>
         </nav>
     </header>
+<div class="middleInfo">
